Don't pass Exec arguments to kstart when launching via desktop entry name

If we have a desktop file org.kde.foo.desktop with "Exec=foo bar bla"

we are currently calling "kstart5 --application org.kde.foo bar bla"

However we need to call "kstart5 --application org.kde.foo" without any args

kstart5/ApplicationLauncherJob will read the Exec line again and pick up the args

BUG: 440507
FIXED-IN: 5.98